# GAOL

./: meson.build  meson_options.txt
check/: meson.build
doc/: meson.build
examples/: meson.build
gaol/: gaol_configuration_.h.in  gaol_fpu_fenv.h  gaol_port.h  meson.build
