option('enable-optimize', type : 'boolean', value : true, description : 'Activate assertions')
option('enable-debug', type : 'boolean', value : false, description : 'Activate debugging messages')
option('enable-simd', type : 'boolean', value : false, description : 'Activate SIMD instructions')
option('enable-asm', type : 'boolean', value : false, description : 'Activate ASM instructions')
option('enable-preserve-rounding', type : 'boolean', value : true, description : 'Activate preserve rounding mode')
option('enable-relations', type: 'string', value:'certainly', description: 'use KIND symbols of relations, with KIND being "set", "certainly" or "possibly" [default=certainly]')
option('enable-exception', type: 'boolean', value: true, description: 'raise exceptions to signal errors [default=yes]')
option('with-mathlib', type: 'string', value: 'apmathlib', description: 'Specify the mathematical library to use between apmathlib and crlib [default=apmathlib]')
option('check-perf', type : 'boolean', value : false, description : 'Run test performances')
